test/libhyperion/syntaxTests/parsing/mapping_and_array_of_functions.hyp
contract test {
    mapping (address => function() internal returns (uint)) a;
    mapping (address => function() external) b;
    mapping (address => function() external[]) c;
    function() external[] d;
}
// ----
// TypeError 4888: (181-204): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
